--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "angular2-auth": "^0.1.7",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "ng2-completer": "^1.6.3",
