--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "angular2-auth": "^0.1.7",
+    "angular2-image-upload": "^1.0.0-rc.0",
     "angular2-infinite-scroll": "^0.3.5",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
