--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular2-infinite-scroll": "^0.3.5",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
     "ng2-bootstrap": "^1.6.3",
     "ng2-completer": "^1.6.3",
     "ng2-input-autocomplete": "0.0.11",
