--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "angular2-auth": "^0.1.7",
     "angular2-image-upload": "^1.0.0-rc.0",
     "angular2-infinite-scroll": "^0.3.5",
+    "angular2-toaster": "^4.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "ng2-bootstrap": "^1.6.3",
     "ng2-completer": "^1.6.3",
     "ng2-input-autocomplete": "0.0.11",
+    "ng2-toastr": "^4.1.2",
+    "ng2-toasty": "^4.0.3",
     "rxjs": "^5.0.1",
     "save": "^2.3.1",
     "ts-helpers": "^1.1.1",
