--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ng2-toasty": "^4.0.3",
     "rxjs": "^5.0.1",
     "save": "^2.3.1",
+    "toastr": "^2.1.2",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
