--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular2-toaster": "^4.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "enhanced-resolve": "^3.3.0",
     "jquery": "^3.2.1",
     "mydatepicker": "^2.5.1",
     "mydaterangepicker": "^4.1.11",
